fix: minor alignment issues

--- a/static/main.css
+++ b/static/main.css
@@ -36,7 +36,7 @@ body {
 }
 
 .container {
-    min-height: calc(100vh - 59px);
+    min-height: calc(100vh - 99px);
 }
 
 .container2 {
